prevent mediaplugin overflow the mebis content area

--- a/theme/mebis/style/mebis-moodle.css
+++ b/theme/mebis/style/mebis-moodle.css
@@ -14361,6 +14361,10 @@ div[role="main"] > h2 {
   }
 }
 
+.mediaplugin {
+  width: 100%;
+}
+
 /*
     Styles for autocomplete form element
 */
